<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="155dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background ="#000000"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/homeIcon"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/home_icon"
                android:src="@drawable/ic_baseline_house_24"/>

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="4"
                android:text="@string/app_bar_name"
                android:textFontWeight="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFF8DC"
                android:textSize="25sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/contactBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/contact_icon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_contacts"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Contacts"
                    android:layout_weight="5"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="20dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/locationBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/location_icon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_location"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Live Location"
                    android:layout_weight="5"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="40dp"/>
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/videoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/video_icon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_video_hd"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="Self Defence "
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="30dp"
                    android:paddingLeft="50dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/feedbackBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/feedback_icon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_feedback" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Requesting Feedback"
                    android:layout_weight="4"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="20dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>